# AI

./: .env.example  .gitignore  .zenodo.json  CITATION.cff  Cargo.toml  Dockerfile  IGNITION.md  INVARIANTS.md  IP_RECORD.md  README.md  REPLICATION_LEADERBOARD.md  SOP-1.md  WHITEPAPER.md  check_stats.py  claim.json  claim2.json  docker-compose.yml  login.json  moltbook-main.html  moltbook-skill.md  post_to_moltbook.py  profile.md  replication_status.json  reply_week2.py  skill.md  support.json  tmp_dash.html  tweet-verify.json  tweet-verify2.json  upload-frozen-bundle.mjs  verify.json  verify_replication.ps1
Genesis-Protocol-v1.0.0-Experimental-Engine/: BUNDLE_MANIFEST.md  SYSTEM_STATE.md
anchor/: epoch_100.json  epoch_1000.json  epoch_1100.json  epoch_1200.json  epoch_1300.json  epoch_1400.json  epoch_1500.json  epoch_1600.json  epoch_1700.json  epoch_1800.json  epoch_1900.json  epoch_200.json  epoch_2000.json  epoch_2100.json  epoch_2200.json  epoch_2300.json  epoch_2400.json  epoch_2500.json  epoch_2600.json  epoch_2700.json  epoch_2800.json  epoch_2900.json  epoch_300.json  epoch_3000.json  epoch_3100.json  epoch_3200.json  epoch_3300.json  epoch_3400.json  epoch_3500.json  epoch_3600.json  epoch_3700.json  epoch_3800.json  epoch_3900.json  epoch_400.json  epoch_4000.json  epoch_4100.json  epoch_4200.json  epoch_4300.json  epoch_4400.json  epoch_4500.json  (+9 more)
archive/: INTEGRITY.md  MANIFEST.md
crates/evolution/: Cargo.toml
crates/evolution/src/: errors.rs  gene_transfer.rs  lib.rs  mutation.rs  selection.rs
crates/genesis-multiverse/: Cargo.toml
crates/genesis-multiverse/src/: divergence.rs  engine.rs  fork.rs  identity.rs  lib.rs  merge.rs  physics.rs
deliverables/: 00_README_REPRODUCE.md  04_LICENSE_NOTES.md
docs/: book.html  dashboard.html  genesis-protocol-paper.html  index.html  paper.html  simulation-data.json  system-state.json
moltbook/: Test-MoltbookIdempotency.ps1  batch_engagement_march2.json  batch_engagement_march2b.json  batch_engagement_march2c.json  batch_reply_comments.ps1  moltbook_operator.ps1  moltbook_reply_ledger.json  post_audit_report.json  post_b_crossover.json  (+4 more)
(+186 files in other folders)
